<resources>
    <string name="app_name">S.R CITAS</string>
    <string name="label_login">Inicio de sesion</string>
    <string name="label_email">Correo Electronico</string>
    <string name="label_registre">Registro</string>
    <string name="label_password">Password</string>
    <string name="btn_login">Ingresar</string>

    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Confirmar Registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointments">Mis Citas</string>
    <string name="btn_log_auth">Cerrar Session</string>
    <string name="btn_log_out">Cerrar Session</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar Cita</string>
    <string name="label_descripcion">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_sheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="reserva_especialidad">Especialidad</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointments_id">Cita medica %1$d</string>
    <string name="item_appointments_date">Atencion el día %1$s</string>
    <string name="item_appointments_time">Hora %1$s</string>
    <string name="label_my_appointments">Mis citas Medicas</string>
    <string name="dialogo_create_appointment_exit_title">¿Esta seguro que desea salir?</string>
    <string name="dialogo_create_appointment_exit1">Si avandonas el registro los datos que has ingresado se perderan</string>
    <string name="dialogo_create_appointment_exit2">Si Salir</string>
    <string name="dialogo_create_appointment_exit3">Continuar registro</string>
    <string name="error_descripcion">La descripcion es demasiado corta</string>
</resources>
