<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"

              tools:context=".RegisterActivity">


    <TextView
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:background="@drawable/bd_gradient"
            android:layout_height="wrap_content"
            android:height="0dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/label_registre"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="14dp"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:text="@string/label_name" />

        <EditText
                android:textColor="@color/white"
                android:inputType="textPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:text="@string/label_email" />

        <EditText
                android:textColor="@color/white"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <TextView
                android:inputType="textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textColor="@color/white"
                android:text="@string/label_password" />

        <EditText
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/btn_register" />

        <TextView
                android:id="@+id/tvGoToLogin"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/label_go_to_login" />
    </LinearLayout>


</LinearLayout>