<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/bd_gradient"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".CreateAppointmentActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            android:gravity="center_horizontal"
            android:paddingTop="12dp"
            android:text="@string/label_create_appointment"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />


    <androidx.cardview.widget.CardView

            android:id="@+id/cvStep1"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPadding="12dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_descripcion" />

            <EditText
                    android:id="@+id/etDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/reserva_especialidad" />

            <Spinner
                    android:id="@+id/spinerSpecialties"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_type" />

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type1" />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type2" />

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/type3" />

            </RadioGroup>

            <Button
                    android:id="@+id/btnNext"
                    style="@style/MenuButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:drawableStart="@drawable/ic_arrow_next"
                    android:text="@string/btn_next" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cvStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_doctor" />

                <Spinner
                        android:id="@+id/spinerDoctors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_sheduled_date" />

                <EditText
                        android:id="@+id/etScheduledDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date"
                        android:maxLines="1"
                        android:onClick="onClickScheduledDate" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <LinearLayout
                            android:id="@+id/radioGroupLeft"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM" />

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:30 AM" />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/radioGroupRigt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM" />

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:30 AM" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_specialty"
                        android:textColor="@color/white" />

                <Button
                        android:id="@+id/btnConfirmAppointment"
                        style="@style/MenuButton"
                        android:layout_width="match_parent"
                        android:layout_marginTop="12dp"
                        android:drawableStart="@drawable/ic_check"
                        android:text="@string/btn_confirm" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/cvStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            tools:text="Medico Test"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/label_doctor" />
                </LinearLayout>



                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/label_sheduled_date" />

                <EditText
                        android:id="@+id/etScheduledDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="date"
                        android:maxLines="1"
                        android:onClick="onClickScheduledDate" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    <LinearLayout
                            android:id="@+id/radioGroupLeft"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM" />

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:30 AM" />
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/radioGroupRigt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:00 AM" />

                        <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8:30 AM" />
                    </LinearLayout>

                </LinearLayout>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_specialty"
                        android:textColor="@color/white" />

                <Button
                        android:id="@+id/btnConfirmAppointment"
                        style="@style/MenuButton"
                        android:layout_width="match_parent"
                        android:layout_marginTop="12dp"
                        android:drawableStart="@drawable/ic_check"
                        android:text="@string/btn_confirm" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>





















